# mcp-config-hub

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: quality.yml
docs/: build_binary.md  configuration_research.md  todos.md
scripts/: build_binary.sh  quality.sh  test.sh
src/mcp_config_hub/: __init__.py  cli.py  config.py  diff_utils.py  formatters.py  integrations.py  storage.py
src/mcp_config_hub.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_config.py  test_diff_utils.py  test_formatters.py  test_integrations.py  test_storage.py
